# Sliding-Tile-Puzzle-Solver

./: 15-puzzle_benchmark.sh  8-puzzle_benchmark.sh  CMakeLists.txt  README.md
include/: heuristic_base.hpp  heuristic_factory.hpp  puzzle_parser.hpp  puzzle_state.hpp  puzzle_types.hpp  solver_base.hpp  solver_factory.hpp
include/heuristics/: euclidean_heuristic.hpp  linear_conflict_heuristic.hpp  manhattan_heuristic.hpp  misplaced_heuristic.hpp
include/solvers/: astar_solver.hpp  bfs_solver.hpp  gbfs_solver.hpp  idastar_solver.hpp  idfs_solver.hpp
instances/: 15puzzle_instances.txt  8puzzle_instances.txt
results/: astar15.csv
src/: heuristic_factory.cpp  main.cpp  puzzle_parser.cpp  puzzle_state.cpp  solver_factory.cpp
src/heuristics/: euclidean_heuristic.cpp  linear_conflict_heuristic.cpp  manhattan_heuristic.cpp  misplaced_heuristic.cpp
src/solvers/: astar_solver.cpp  bfs_solver.cpp  gbfs_solver.cpp  idastar_solver.cpp  idfs_solver.cpp
tests/: astar15_solver_tests.cpp  astar_solver_tests.cpp  bfs_solver_tests.cpp  euclidean_heuristic_tests.cpp  gbfs_solver_tests.cpp  idastar_solver_tests.cpp  idfs_solver_tests.cpp  manhattan_heuristic_tests.cpp  misplaced_heuristic_tests.cpp  puzzle_state_tests.cpp
